--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dynamics text design!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 
   <div class="container">
-    <h1 class="fancy-text">Just trying to make awesome website!</h1>
+    <h1 class="fancy-text" id="dynamicText">Just trying to make awesome website!</h1>
     <p class="sub-text">This is a simple HTML & CSS text styling example.</p>
+<button class="changeTextBtn">Change Text</button>
     </div>
-
-
+    <script src="script.js"></script>
 </body>
 </html>
